updated link version

--- a/71f0453cb1846145f08b90e9b2ecd29ace933ec7/assets/css/style.css
+++ b/71f0453cb1846145f08b90e9b2ecd29ace933ec7/assets/css/style.css
@@ -26,6 +26,10 @@
   .main .banner__fig {
     margin-bottom: 8px;
   }
+  .main .banner__fig img {
+    width: 100%;
+    height: 100%;
+  }
   .main .banner__video {
     width: 682px;
     height: 384px;
