--- a/71f0453cb1846145f08b90e9b2ecd29ace933ec7/assets/scss/_main-contents.scss
+++ b/71f0453cb1846145f08b90e9b2ecd29ace933ec7/assets/scss/_main-contents.scss
@@ -21,6 +21,10 @@
 
             &__fig {
                 margin-bottom: 8px;
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
             }
 
             &__video {
